# candorship

./: .env.example  README.md  manage.py  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: django.yml
candorship/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
dashboard/: urls.py  views.py
integrations/google/: client.py
landing/: views.py
projects/: forms.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_initial.py
roadmap/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
roadmap/migrations/: 0001_initial.py  0002_initial.py  0003_alter_roadmapitem_status.py
static/css/: app.css  input.css
templates/dashboard/: dashboard.html
templates/landing/: demos.html  footer.html  index.html  landing.html  nav.html
templates/partials/: anonymous_base.html  nav.html
templates/projects/: create.html  update.html
templates/projects/partials/: form.html  form_success.html
templates/roadmap/: create_roadmap.html  edit_roadmap.html  roadmap.html  roadmap_detail.html  roadmaps.html
templates/users/: login.html  signup.html
users/: admin.py  backends.py  conftest.py  forms.py  models.py  tests.py  views.py
users/migrations/: 0001_initial.py  0002_organization_github_url_organization_homepage_url.py  0002_organization_remove_user_birthday_and_more.py  0003_externalprofile.py  0003_user_email_verified.py
